--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /.idea
 /test
-/debugging-comics
+/debugging-atom-dl
 __pycache__
 /venv
 /build
 /dist
-/comics_dl.egg-info
-ComicsDownloader.log
+/atom_dl.egg-info
+AtomDownloader.log
