--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "cwd": "${workspaceFolder}/debugging-atom-dl/",
             "args": [
                 "-v",
-                "-plf"
+                "-fjd"
             ],
             "justMyCode": false
         }
