replace Log with logging, use FetchWorkerPool instead of Semaphore, WorkerPool is already capable of using worker that worked on same domain (but we do not yet use it)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,7 @@
     "configurations": [
         {
             "name": "Atom-DL Process latest Feed",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/atom-dl",
             "console": "integratedTerminal",
@@ -16,7 +16,7 @@
         },
         {
             "name": "Atom-DL Feed JDownloader",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/atom-dl",
             "console": "integratedTerminal",
