fix comicmafia download links

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,8 @@
             "args": [
                 "-v",
                 "-plf",
+                "--max-parallel-downloads",
+                "5"
             ],
             "justMyCode": false
         },
