--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,12 @@ version: '3.8'
 
 services:
   atom-dl:
-    build: .
-    user: "621:1000"
+    build:
+      context: .
+      args:
+        - PUID=621
+        - PGID=1000
     container_name: atom-dl
     volumes:
-      - ./app-atom-dl/data:/root/.local/share/atom-dl
-      - ./app-atom-dl/config:/root/.config/atom-dl
+      - ./app-atom-dl/data:/home/atom-dl/.local/share/atom-dl
+      - ./app-atom-dl/config:/home/atom-dl/.config/atom-dl
