--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 version: '3.8'
-
 services:
   atom-dl-plf:
     build:
@@ -12,7 +11,7 @@ services:
       - ./app-atom-dl/data:/home/atom-dl/.local/share/atom-dl
       - ./app-atom-dl/config:/home/atom-dl/.config/atom-dl
       - ${ATOM_DL_DOWNLOADS_PATH}:/atom-dl-downloads
-    command: ["atom-dl -plf"]
+    command: ["atom-dl", "-plf"]
   atom-dl-fjd:
     build:
       context: .
@@ -24,4 +23,4 @@ services:
       - ./app-atom-dl/data:/home/atom-dl/.local/share/atom-dl
       - ./app-atom-dl/config:/home/atom-dl/.config/atom-dl
       - ${ATOM_DL_DOWNLOADS_PATH}:/atom-dl-downloads
-    command: ["atom-dl -fjd"]
+    command: ["atom-dl", "-fjd"]
