--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ./app-atom-dl/data:/home/atom-dl/.local/share/atom-dl
       - ./app-atom-dl/config:/home/atom-dl/.config/atom-dl
       - ${ATOM_DL_DOWNLOADS_PATH}:/atom-dl-downloads
+      - "/etc/localtime:/etc/localtime:ro"
     command: ["atom-dl", "-plf"]
   atom-dl-fjd:
     build:
@@ -23,4 +24,5 @@ services:
       - ./app-atom-dl/data:/home/atom-dl/.local/share/atom-dl
       - ./app-atom-dl/config:/home/atom-dl/.config/atom-dl
       - ${ATOM_DL_DOWNLOADS_PATH}:/atom-dl-downloads
+      - "/etc/localtime:/etc/localtime:ro"
     command: ["atom-dl", "-fjd"]
